--- a/app/views/reviews/reviews.erb
+++ b/app/views/reviews/reviews.erb
@@ -1,8 +1,51 @@
 <center><h1>Reviews From Around the Library</h1></center>
 
-<p><h2>Reviews:</h2> <% @reviews.each do |review| %>
-	<p><%= review.book %></p>
-	<p><%= review.summary %></p>
+<a href = "/books/add" class = "button">Add a New Book to the Library</a>
+<style>
+.button {
+  font: bold 11px Arial;
+  text-decoration: none;
+  background-color: #EEEEEE;
+  color: #333333;
+  padding: 2px 6px 2px 6px;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
+}
+</style>
+<p> <a href = "/reviews/new" class = "button">Review a Book</a> </p>
+<style>
+.button {
+  font: bold 11px Arial;
+  text-decoration: none;
+  background-color: #EEEEEE;
+  color: #333333;
+  padding: 2px 6px 2px 6px;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
+}
+</style>
+
+
+<p><h2>All Reviews:</h2> <% @reviews.each do |review| %>
+	<p><b>Book Title:</b> <%= review.book.title %></p>
+	<p><b>Review Summary:</b> <%= review.summary %></p>
 	<% end %></p>
 
-<a href = "/logout">Log Out</a>
+<p><a href = "/logout" class = "button">Log Out</a></p>
+<style>
+.button {
+  font: bold 11px Arial;
+  text-decoration: none;
+  background-color: #EEEEEE;
+  color: #333333;
+  padding: 2px 6px 2px 6px;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
+}
+</style>
