--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -8,3 +8,5 @@
 
 <input type = "submit" name = "Create Your Account" id = "submit">
 </form>
+
+<p><a href = "/login">Log in to your Account</a></p>
