--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,4 +2,4 @@
 
 <center>We're a premium book review website that answers all of your burning questions about the books you're reading or thinking about reading! Let's get reading!</center>
 
-<p><center><a href = '/signup'>Sign Up</a> or <a href = "/login">Log In</a></center></p>
+<p><center><a href = '/signup' class = "button">Sign Up</a> or <a href = "/login" class = "button">Log In</a></center></p>
