--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -9,4 +9,4 @@
 <input type = "submit" name = "Create Your Account" id = "submit">
 </form>
 
-<p><a href = "/login">Log in to your Account</a></p>
+<p><a href = "/login" class = "button">Log in to your Account</a></p>
