--- a/app/views/reviews/reviews.erb
+++ b/app/views/reviews/reviews.erb
@@ -1,51 +1,15 @@
 <center><h1>Reviews From Around the Library</h1></center>
 
 <a href = "/books/add" class = "button">Add a New Book to the Library</a>
-<style>
-.button {
-  font: bold 11px Arial;
-  text-decoration: none;
-  background-color: #EEEEEE;
-  color: #333333;
-  padding: 2px 6px 2px 6px;
-  border-top: 1px solid #CCCCCC;
-  border-right: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-  border-left: 1px solid #CCCCCC;
-}
-</style>
-<p> <a href = "/reviews/new" class = "button">Review a Book</a> </p>
-<style>
-.button {
-  font: bold 11px Arial;
-  text-decoration: none;
-  background-color: #EEEEEE;
-  color: #333333;
-  padding: 2px 6px 2px 6px;
-  border-top: 1px solid #CCCCCC;
-  border-right: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-  border-left: 1px solid #CCCCCC;
-}
-</style>
 
+<p> <a href = "/reviews/new" class = "button">Review a Book</a> </p>
+
+<p> <a href = "/users/<%=@user.username%>" class = "button">My Reviews</a></p>
 
 <p><h2>All Reviews:</h2> <% @reviews.each do |review| %>
+	<p><b>Username:</b> <%= review.user.username %></p>
 	<p><b>Book Title:</b> <%= review.book.title %></p>
 	<p><b>Review Summary:</b> <%= review.summary %></p>
+	<p><a href = "/reviews/<%=review.id%>" class = "button">View this Review</a>
 	<% end %></p>
 
-<p><a href = "/logout" class = "button">Log Out</a></p>
-<style>
-.button {
-  font: bold 11px Arial;
-  text-decoration: none;
-  background-color: #EEEEEE;
-  color: #333333;
-  padding: 2px 6px 2px 6px;
-  border-top: 1px solid #CCCCCC;
-  border-right: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-  border-left: 1px solid #CCCCCC;
-}
-</style>
