--- a/app/views/reviews/show_review.erb
+++ b/app/views/reviews/show_review.erb
@@ -1,11 +1,11 @@
 <h1><center>View Book Reviews for <%=@book.title%></center></h1>
 <center><h2>By: <%=@book.author%></h2></center>
 
-<a href = "/reviews/new/<%=@book.slug%>">Write Your Own Review</a>
+<a href = "/reviews/new/<%=@book.slug%>" class = "button">Write Your Own Review</a>
 
 <% @reviews.each do |review| %>
-<p><%= review.user.username %></p>
-<p><%= review.summary %></p>
+<p><b>Username: </b><%= review.user.username %></p>
+<p><b>Review: </b><%= review.summary %></p>
 <% end %>
 
 
