Add rack flash message.

--- a/app/views/books/books.erb
+++ b/app/views/books/books.erb
@@ -6,3 +6,5 @@
 <p><a href = "/books/<%=book.slug%>" class = "button">View Reviews for <%= book.title%></a></p>
 <% end %>
 
+<a href = "/reviews" class = "button">See All Reviews</a>
+
