--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -28,6 +28,7 @@
   </style>
   <% if logged_in? %>
       <a href = "/logout" class = "button">Log Out</a>
+      <a href = '/reviews' class = "button">Homepage</a>
   <% else %>
       <a href = "/signup" class = "button">Sign Up</a>
       <a href = "/login" class = "button">Log In</a>
