--- a/app/views/reviews/single.erb
+++ b/app/views/reviews/single.erb
@@ -2,10 +2,13 @@
 
 <b>Username:</b> <%=@review.user.username%>
 <p><b>Review:</b> <%= @review.summary %><br></p>
+
+<%if @user == @review.user%> 
 <a href = "/reviews/<%=@review.id%>/edit" class = "button">Edit this Review</a>
 <form method="post" action="/reviews/<%= @review.id %>">
   <input type="hidden" name="_method" value="delete" />
   <p><input type="submit"name = "Delete Review" value = "Delete Review"></p>
 </form>
+<%end%>
 
 <p><a href = "/reviews" class = "button">Back to Reviews</a></p>
