Added and played with styling.

--- a/app/views/books/books.erb
+++ b/app/views/books/books.erb
@@ -1,4 +1,4 @@
-<center><h1>All the Books in Our Library</h1></center>
+<center><h1 class = "title">All the Books in Our Library</h1></center>
 
 <% @books.each do |book| %>
 <b>Title:</b> <%= book.title %><br>
