--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-<h1><center>Welcome to Look at Book Reviews!</center></h1>
+<h1 class = "title"><center>Welcome to Look at Book Reviews!</center></h1>
 
 <center>We're a premium book review website that answers all of your burning questions about the books you're reading or thinking about reading! Let's get reading!</center>
 
