--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -26,6 +26,13 @@
   border-left: 1px solid #CCCCCC;
   }
   </style>
+
+  <style>
+    .title {
+      font: bold 25px Arial;
+    }
+  </style>
+
   <% if logged_in? %>
       <a href = "/logout" class = "button">Log Out</a>
       <a href = '/reviews' class = "button">Homepage</a>
