--- a/app/views/reviews/edit.erb
+++ b/app/views/reviews/edit.erb
@@ -1,4 +1,4 @@
-<center><h1>Edit Your Review</h1></center>
+<center><h1 class = "title">Edit Your Review</h1></center>
 
 <form action='/reviews/<%=@review.id%>' method="POST">
 
