--- a/app/views/reviews/mine.erb
+++ b/app/views/reviews/mine.erb
@@ -1,4 +1,4 @@
-<center><h1>Viewing <%=@user.username%>'s Reviews</h1></center>
+<center><h1 class = "title">Viewing <%=@user.username%>'s Reviews</h1></center>
 
 <% @reviews.each do |review| %>
 <p><b>Book Title:</b> <%= review.book.title %></p>
