--- a/app/views/reviews/new.erb
+++ b/app/views/reviews/new.erb
@@ -1,5 +1,5 @@
 
-<h1><center>Write a New Review</center></h1>
+<h1 class = "title"><center>Write a New Review</center></h1>
 
 <form method = "POST" action = "/reviews/new">
 	<% @books.each do |book|%>
