--- a/app/views/reviews/show_review.erb
+++ b/app/views/reviews/show_review.erb
@@ -1,4 +1,4 @@
-<h1><center>View Book Reviews for <%=@book.title%></center></h1>
+<h1 class = "title"><center>View Book Reviews for <%=@book.title%></center></h1>
 <center><h2>By: <%=@book.author%></h2></center>
 
 <a href = "/reviews/new" class = "button">Write Your Own Review</a>
