--- a/app/views/reviews/single.erb
+++ b/app/views/reviews/single.erb
@@ -1,4 +1,4 @@
-<h1><center>View the Review for <%=@review.book.title%></center></h1>
+<h1 class = "title"><center>View the Review for <%=@review.book.title%></center></h1>
 
 <b>Username:</b> <%=@review.user.username%>
 <p><b>Review:</b> <%= @review.summary %><br></p>
