--- a/app/views/books/add.erb
+++ b/app/views/books/add.erb
@@ -1,4 +1,4 @@
-<center><h1>Add a New Book to the Library</h1></center>
+<center><h1 class = "title">Add a New Book to the Library</h1></center>
 
 <form method = "POST" action = "/books/add">
 	<p>Add a New Book Title: <input type = "text" name = "title" id = "title"></p>
