--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,4 @@
-<center><h1>Log In to Your Look at Book Reviews Account</h1></center>
+<center><h1 class = "title">Log In to Your Look at Book Reviews Account</h1></center>
 
 <form method = "POST" action = "/login">
 
