--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,4 +1,4 @@
-<center><h1>Create your Look at Book Reviews Account</h1></center>
+<center><h1 class = "title">Create your Look at Book Reviews Account</h1></center>
 
 <form method = "POST" action = "/signup">
 	
