--- a/app/views/books/add.erb
+++ b/app/views/books/add.erb
@@ -1,3 +1,5 @@
+
+
 <center><h1 class = "title">Add a New Book to the Library</h1></center>
 
 <form method = "POST" action = "/books/add">
@@ -5,5 +7,13 @@
 	<p>Add the Book's Author: <input type = "text" name = "author" id = "author"></p>
 
 	<input type = "submit" name = "Submit" id = "submit">
+
+
+	<p>
+<% if flash.has?(:message) %>
+  <font color = "red"><b><%= flash[:message] %></b></font>
+<% end %>
+</p>
+
 </form>
 
